ELY-1153 wildfly-common is required dependancy